fix z-index error

--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -7,7 +7,7 @@
 }
 
 .hero-intro-container {
-  z-index: 1;
+  z-index: 5;
   width: 85%;
   /*color: rgb(22, 29, 88);*/
   /*text-shadow: 0 0 2px rgba(255, 255, 255, 0.3), 0 0 2px rgba(255, 255, 255, 0.3);*/
@@ -90,7 +90,6 @@
   bottom: -1em;
   background: var(--accent-color-bright);
   border: 3px solid var(--accent-color-bright);
-  z-index: .75;
 }
 
 #hero-main::before {
